variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:4: error: value unary_! is not a member of Int
while ( ! 2*biscuits == caseorange + 1){
        ^